frontend/tests/cases/negative/instanceOverlapConcretePolymorphic-2.gr
interface Simple a

instance Simple a

-- overlaps with 'a'
instance Simple Int
